feet: UserServiceTest is done and fixed a bit PaymentCardServiceTest