@@ -21,8 +21,7 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
@@ -31,7 +30,6 @@ import static org.mockito.internal.verification.VerificationModeFactory.times;
 
 @ExtendWith(MockitoExtension.class)
 public class UserServiceTest {
-
 
     @Mock
     private UserRepository userRepository;
@@ -42,10 +40,9 @@ public class UserServiceTest {
     @InjectMocks
     private UserService userService;
 
-
-
     @Test
     void createUserTest(){
+
         UserInputDto userInputDto = new UserInputDto(
                 "Petr",
                 "Petrov",
@@ -82,10 +79,12 @@ public class UserServiceTest {
 
         verify(userRepository, times(1)).findByEmail(userInputDto.email());
         verify(userRepository, times(1)).save(user);
+
     }
 
     @Test
     void findUserByIdTest(){
+
         Long userId = 1L;
         User user = new User();
         UserOutputDto userOutputDto = new UserOutputDto(
@@ -107,17 +106,20 @@ public class UserServiceTest {
         UserOutputDto actualDto = userService.findUserById(userId);
         assertNotNull(actualDto);
         assertEquals(userId, actualDto.id());
+
     }
 
 
     @Test
     void getAllUsersTest(){
+
         String name = "Ivan";
         String surname = "Ivanov";
         Pageable pageable = PageRequest.of(0, 10);
 
         User user = new User();
         Page<User> userPage = new PageImpl<>(List.of(user));
+
         UserOutputDto userOutputDto = new UserOutputDto(
                 1L,
                 "Petr",
@@ -129,26 +131,88 @@ public class UserServiceTest {
                 null,
                 null);
 
+        Page<UserOutputDto> actualPage = userService.getAllUsers(name, surname, pageable);
+
         when(userRepository.findAll(any(Specification.class), eq(pageable)))
                 .thenReturn(userPage);
         when(userMapper.toDto(user))
                 .thenReturn(userOutputDto);
 
-        Page<UserOutputDto> actualPage = userService.getAllUsers(name, surname, pageable);
-
         assertNotNull(actualPage);
         assertThat(actualPage.getContent()).hasSize(1);
-        assertEquals(1L, actualPage.getContent().get(0).id());
+        assertEquals(1L, actualPage.getContent().getFirst().id());
         verify(userRepository, times(1)).findAll(any(Specification.class), eq(pageable));
+
     }
 
     @Test
     void updateUserById(){
 
+        Long userId = 1L;
+        UserInputDto userInputDto = new UserInputDto(
+                "Petr",
+                "Petrov",
+                LocalDate.of(2004, 5, 7),
+                "petrov@gmail.com",
+                true);
+
+        User existingUser = new User();
+        existingUser.setId(userId);
+        existingUser.setEmail("old@gmail.com");
+
+        UserOutputDto userOutputDto = new UserOutputDto(
+                1L,
+                "Petr",
+                "Petrov",
+                LocalDate.of(2004, 5, 7),
+                "petrov@mail.com",
+                true,
+                null,
+                null,
+                null);
+
+        UserOutputDto resultDto = userService.updateUserById(userId, userInputDto);
+
+        when(userRepository.findById(userId))
+                .thenReturn(Optional.of(existingUser));
+        when(userRepository.findByEmail(userInputDto.email()))
+                .thenReturn(Optional.empty());
+        when(userMapper.toDto(existingUser))
+                .thenReturn(userOutputDto);
+
+
+        assertNotNull(resultDto);
+        assertEquals("new@gmail.com", resultDto.email());
+        assertEquals("Petr", existingUser.getName());
+
     }
 
     @Test
     void updateUserStatus(){
+
+        User user = new User();
+        user.setId(1L);
+        user.setActive(true);
+
+        UserOutputDto userOutputDto = new UserOutputDto(
+                1L,
+                "Petr",
+                "Petrov",
+                LocalDate.of(2004, 5, 7),
+                "petrov@mail.com",
+                true,
+                null,
+                null,
+                null);
+
+        UserOutputDto resultDto = userService.updateUserStatus(1L, false);
+
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(userMapper.toDto(user)).thenReturn(userOutputDto);
+
+        assertNotNull(resultDto);
+        assertFalse(resultDto.active());
+        assertFalse(user.getActive());
 
     }
 
@@ -162,6 +226,7 @@ public class UserServiceTest {
                 .thenReturn(Optional.of(user));
 
         userService.deleteUser(1L);
+
         verify(userRepository).deleteById(1L);
 
     }
